--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,11 @@
 
     </head>
     <body>
-
-        <!--<input id="colors" type="text" placeholder="Colors (separated by comma)" value="#8AD2F1,#50D691,#FF665E,#F5E326,#B8AFA6,#77675B" />-->
         <div class="container-fluid">
         	<div class="col-md-12">
         		<h1>Qlik Sense Colors</h1>
-		        <select id="colors" class="form-control" multiple>
-		        </select>
+		        <select id="colors" class="form-control" multiple></select>
+		        <em><strong>Example:</strong> #8AD2F1,#50D691,#FF665E,#F5E326,#B8AFA6,#77675B</em><br><br>
 			</div>
 		
 			<div class="col-md-12">
