Fixed js import

--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.2.1/chroma.min.js"></script>
         <script src="dependencies/tokenize2/tokenize2.min.js"></script>
-        <script src="upload.js"></script>
-        <script src="download.js"></script>
+        <script src="javascript/upload.js"></script>
+        <script src="javascript/download.js"></script>
         <script type="text/javascript">
 
         	$('#colors').tokenize2({sortable: true, tokensAllowCustom: true, placeholder: "Base colors"});
