--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,11 @@
                 <a id="fileDownload" class="hidden" href="##">download file</a>
             </div>
 
+            <div class="col-md-12 text-center">
+                <hr>
+                <h6>Created by Frederik Fenger for Inspari A/S</h6>
+            </div>
+
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
