Added link to docs

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
         <div class="container-fluid">
         	<div class="col-md-12">
         		<h1>Qlik Sense Colors</h1>
+                <p><a target="_blank" href="http://qlik-sense-framework.readthedocs.io/en/latest/themes.html">Usage information</a></p>
                 <hr>
             </div>
 
